# deepcode

./: .gitignore  .gitmodules
cache/: .gitignore
model/: Dockerfile  Makefile  README.md  config.toml  exploration.ipynb  predict.sh  predict_all.py  pyproject.toml  tok.py
model/deepcode/: config.py  hdf5.py  loss.py  model.py  prefetcher.py  scaffold.py
model/deepcode/convert/: __main__.py
model/deepcode/encoders/: __init__.py  pooling.py  rnn.py
model/deepcode/predict/: __main__.py  data.py  scaffold.py
model/deepcode/predict/upload/: __main__.py
model/deepcode/train/: __init__.py  __main__.py  data.py  scaffold.py
model/experiments/: all-128.toml  all-glove.toml  all-lstm-96-128.toml  config.toml  go-java.toml  go-javascript.toml  go-php.toml  go-python.toml  go-ruby.toml  java-javascript.toml  java-php.toml  java-python.toml  java-ruby.toml  javascript-php.toml  javascript-python.toml  javascript-ruby.toml  php-python.toml  php-ruby.toml  python-ruby.toml
model/exploration/: samples.ipynb
model/tests/: test_config.py
model/tests/encoders/: test_bagofwords.py  test_pooling.py  test_rnn.py
model/wandb/: settings
preprocess/: Cargo.toml  README.md  build.rs
preprocess/src/: bin-seq-glove.rs  bin-seq-search.rs  bin-seq-train.rs  bin-tree.rs  bin-vocabs.rs  main.rs  parsers.rs  seq-glove.rs  seq.rs  seq2.rs  structs.rs  tree.rs  utils.rs
