[tool.poetry]
name = "deepcode-model"
version = "0.1.0"
description = ""
authors = ["Nikita Vilunov <nikita@vilunov.me>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4"
numpy = "^1.18"
toml = "^0.10.0"
h5py = "^2.10"
dacite = "^1.2"
transformers = "^2.4"
wandb = "^0.8.29"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
