[package]
name = "deepcode-preprocess"
version = "0.1.0"
authors = ["Nikita Vilunov <nikita@vilunov.me>"]
edition = "2018"

[dependencies]
tokenizers = "0.6.0"
rayon = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libflate = "0.1.27"
glob = "0.3.0"
hdf5 = "0.5.2"
regex = "1"
lazy_static = "1.4"
