[package]
name = "deepcode-preprocess"
version = "0.1.0"
authors = ["Nikita Vilunov <nikita@vilunov.me>"]
edition = "2018"

[dependencies]
tokenizers = "0.6.0"
rayon = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libflate = "0.1.27"
glob = "0.3.0"
hdf5 = "0.5.2"
regex = "1"
lazy_static = "1.4"
tree-sitter = "0.6.3"

[build-dependencies]
cc = "1"

[[bin]]
name = "preprocess-seq"
path = "src/seq.rs"

[[bin]]
name = "preprocess-seq2"
path = "src/seq2.rs"

[[bin]]
name = "preprocess-seq-glove"
path = "src/seq-glove.rs"

[[bin]]
name = "preprocess-tree"
path = "src/tree.rs"
