[package]
name = "deepcode-preprocess"
version = "0.1.0"
authors = ["Nikita Vilunov <nikita@vilunov.me>"]
edition = "2018"

[dependencies]
tokenizers = "0.6.0"
rayon = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libflate = "0.1.27"
glob = "0.3.0"
hdf5 = "0.5.2"
regex = "1"
lazy_static = "1.4"
tree-sitter = "0.6.3"

[build-dependencies]
cc = "1"

[[bin]]
name = "preprocess-vocabs"
path = "src/bin-vocabs.rs"

[[bin]]
name = "preprocess-seq-train"
path = "src/bin-seq-train.rs"

[[bin]]
name = "preprocess-seq-search"
path = "src/bin-seq-search.rs"

[[bin]]
name = "preprocess-seq-glove"
path = "src/bin-seq-glove.rs"

[[bin]]
name = "preprocess-tree"
path = "src/bin-tree.rs"
